--- a/.azure-pipelines/steps/run-in-docker.yml
+++ b/.azure-pipelines/steps/run-in-docker.yml
@@ -21,8 +21,8 @@ steps:
         --build-arg DOTNETSDK_VERSION=$(dotnetCoreSdk5Version) \
         --tag dd-trace-dotnet/${{ parameters.baseImage }}-${{ parameters.target }} \
         --target ${{ parameters.target }} \
-        --file "$(System.DefaultWorkingDirectory)/build/_build/docker/${{ parameters.baseImage }}.dockerfile" \
-        "$(System.DefaultWorkingDirectory)/build/_build"
+        --file "$(System.DefaultWorkingDirectory)/tracer/build/_build/docker/${{ parameters.baseImage }}.dockerfile" \
+        "$(System.DefaultWorkingDirectory)/tracer/build/_build"
     displayName: Build ${{ parameters.baseImage }} Docker image
 - script: |
     docker run --rm \
@@ -31,5 +31,5 @@ steps:
         --env tracerHome=/project/$(relativeTracerHome) \
         --env artifacts=/project/$(relativeArtifacts) \
         dd-trace-dotnet/${{ parameters.baseImage }}-${{ parameters.target }} \
-        dotnet /build/bin/Debug/_build.dll ${{ parameters.command }}
+        dotnet /tracer/build/bin/Debug/_build.dll ${{ parameters.command }}
   displayName: Run '${{ parameters.command }}' in Docker
