--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -630,6 +630,26 @@ services:
       - kafka-broker
       - kafka-zookeeper
 
+
+  StartDependencies:
+    image: andrewlock/wait-for-dependencies
+    depends_on:
+      - servicestackredis
+      - stackexchangeredis
+      - elasticsearch6
+      - elasticsearch5
+      - sqlserver
+      - mongo
+      - postgres
+      - mysql
+      - mysql57
+      - rabbitmq
+      - kafka-broker
+      - kafka-zookeeper
+    environment:
+      - TIMEOUT_LENGTH=60
+    command: servicestackredis:6379 stackexchangeredis:6379 elasticsearch5:9200 elasticsearch6:9200 sqlserver:1433 mongo:27017 postgres:5432 mysql:3306 mysql57:3306 rabbitmq:5672 kafka-broker:9092 kafka-zookeeper:2181
+
   IntegrationTests2.ARM64:
     build:
       context: ./build/_build/
@@ -665,6 +685,21 @@ services:
       - postgres
       - mysql
       - rabbitmq
+
+  StartDependencies.ARM64:
+    image: andrewlock/wait-for-dependencies
+    depends_on:
+      - servicestackredis
+      - stackexchangeredis
+      - elasticsearch7_arm64
+      - sqledge
+      - mongo
+      - postgres
+      - mysql
+      - rabbitmq
+    environment:
+      - TIMEOUT_LENGTH=60
+    command: servicestackredis:6379 stackexchangeredis:6379 elasticsearch7_arm64:9200 sqledge:1433 mongo:27017 postgres:5432 mysql:3306 rabbitmq:5672
 
   IntegrationTests.ARM64.Core50:
     build:
