Directly reference Datadog.Trace.csproj to fix build break

--- a/test/test-applications/integrations/Samples.AWS.SQS/Samples.AWS.SQS.csproj
+++ b/test/test-applications/integrations/Samples.AWS.SQS/Samples.AWS.SQS.csproj
@@ -5,6 +5,10 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\src\Datadog.Trace\Datadog.Trace.csproj" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="$(ApiVersion)" />
