--- a/.azure-pipelines/crank.yml
+++ b/.azure-pipelines/crank.yml
@@ -122,11 +122,39 @@ jobs:
     artifact: linux-native
 
 
+- job: linux_arm64_profiler
+  pool: Arm64
+  workspace:
+    clean: all
+
+  steps:
+
+  - task: DotNetCoreCLI@2
+    displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
+    inputs:
+      command: build
+      configuration: Release
+      arguments: /nowarn:netsdk1138
+      projects: |
+        src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+
+  - task: DockerCompose@0
+    displayName: docker-compose run Profiler
+    inputs:
+      containerregistrytype: Container Registry
+      dockerComposeCommand: run -e buildConfiguration=Release Profiler
+
+  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
+    artifact: linux-native-arm64
+
+
+
 - job: crank
   pool: Throughput
   workspace:
     clean: all
   dependsOn:
+  - linux_arm64_profiler
   - linux_profiler
   - windows_profiler
   condition: succeeded()
@@ -140,6 +168,7 @@ jobs:
       sourceFolder: $(Pipeline.Workspace)/linux-native
       targetFolder: $(System.DefaultWorkingDirectory)/
 
+
   - download: current
     artifact: windows-native
 
@@ -147,6 +176,16 @@ jobs:
     inputs:
       sourceFolder: $(Pipeline.Workspace)/windows-native
       targetFolder: $(System.DefaultWorkingDirectory)/
+
+
+  - download: current
+    artifact: linux-native-arm64
+
+  - task: CopyFiles@2
+    inputs:
+      sourceFolder: $(Pipeline.Workspace)/linux-native-arm64
+      targetFolder: $(System.DefaultWorkingDirectory)/arm64
+
 
   - script: |
       cd ./build/crank
