Add SQS port to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -415,7 +415,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
-    - AWS_SQS_HOST=aws_sqs
+    - AWS_SQS_HOST=aws_sqs:9324
     - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp2.1
@@ -455,7 +455,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
-    - AWS_SQS_HOST=aws_sqs
+    - AWS_SQS_HOST=aws_sqs:9324
     - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp3.0
@@ -495,7 +495,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
-    - AWS_SQS_HOST=aws_sqs
+    - AWS_SQS_HOST=aws_sqs:9324
     - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=netcoreapp3.1
@@ -535,7 +535,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
-    - AWS_SQS_HOST=aws_sqs
+    - AWS_SQS_HOST=aws_sqs:9324
     - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=net5.0
@@ -575,7 +575,7 @@ services:
     - MYSQL57_HOST=mysql57
     - MYSQL57_PORT=3306
     - RABBITMQ_HOST=rabbitmq
-    - AWS_SQS_HOST=aws_sqs
+    - AWS_SQS_HOST=aws_sqs:9324
     - KAFKA_BROKER_HOST=kafka-broker:29092
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=${publishTargetFramework}
@@ -613,7 +613,7 @@ services:
     - MYSQL_HOST=mysql
     - MYSQL_PORT=3306
     - RABBITMQ_HOST=rabbitmq
-    - AWS_SQS_HOST=aws_sqs
+    - AWS_SQS_HOST=aws_sqs:9324
     - buildConfiguration=${buildConfiguration}
     - publishTargetFramework=net5.0
     depends_on:
