--- a/test/test-applications/regression/NLog10LogsInjection.NullReferenceException/NLog10LogsInjection.NullReferenceException.csproj
+++ b/test/test-applications/regression/NLog10LogsInjection.NullReferenceException/NLog10LogsInjection.NullReferenceException.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFrameworks>net452;net461</TargetFrameworks>
     <ExcludeManagedProfiler>true</ExcludeManagedProfiler>
   </PropertyGroup>
 
